Add page setup dialog to ActiveX control & fix com exception in IOleCommandTargetImpl. b=225045 r=atemon@elansoftware.com sr=bzbarsky a=asa