embedding/browser/activex/src/common/IOleCommandTargetImpl.h
@@ -238,8 +238,7 @@ public:
             {
                 pCI->pfnCommandProc(pT, pCI->pCmdGUID, pCI->nCmdID, nCmdexecopt, pvaIn, pvaOut);
             }
-            else if (pCI->nWindowsCmdID != 0 &&
-                     !(nCmdexecopt & OLECMDEXECOPT_SHOWHELP))
+            else if (pCI->nWindowsCmdID != 0 && nCmdexecopt != OLECMDEXECOPT_SHOWHELP)
             {
                 HWND hwndTarget = pT->GetCommandTargetWindow();
                 if (hwndTarget)
